--- a/index.html
+++ b/index.html
@@ -21,9 +21,19 @@
             </div>
 
             <ul class="list-group">
+                <li class="todo list-group-item d-flex align-items-center">
+                    <input class="form-check-input" type="checkbox" id="todo-3">
+                    <label class="ms-2 form-check-label" for="todo-1">
+                        Tâche à faire 3
+                    </label>
+                    <label class="ms-auto btn btn-danger btn-sm">
+                    <i class="bi-trash">
+                    </i>
+                    </label>
+                </li>
             <li class="todo list-group-item d-flex align-items-center">
-                <input class="form-check-input" type="checkbox" id="todo-1">
-                <label class="ms-2 form-check-label" for="todo-1">
+                <input class="form-check-input" type="checkbox" id="todo-2">
+                <label class="ms-2 form-check-label" for="todo-2">
                     Tâche à faire 2
                 </label>
                 <label class="ms-auto btn btn-danger btn-sm">
@@ -32,8 +42,8 @@
                 </label>
             </li>
             <li class="todo list-group-item d-flex align-items-center">
-                <input class="form-check-input" type="checkbox" id="todo-2">
-                <label class="ms-2 form-check-label" for="todo-2">
+                <input class="form-check-input" type="checkbox" id="todo-1">
+                <label class="ms-2 form-check-label" for="todo-1">
                     Tâche à faire 1
                 </label>
                 <label class="ms-auto btn btn-danger btn-sm">
