ajout du lien app.js

--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
             </ul>
         </main>
     </section>
-
+    
+    <!-- Lien vers le fichier app.js -->
+    <script src="app.js"></script>
 </body>
 </html>
