ajout evenement au formulaire

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <section class="container pt-5" id="todolist">
         <form class="d-flex pb-4">
-            <input required="" class="form-control" type="text" placeholder="Acheter des patates..." name="title" data-com.bitwarden.browser.user-edited="yes">
+            <input required="" class="form-control" type="text" placeholder="Lessives..." name="title" data-com.bitwarden.browser.user-edited="yes">
             <button class="btn btn-primary">Ajouter</button>
         </form>
         <main>
@@ -54,7 +54,7 @@
             </ul>
         </main>
     </section>
-    
+
     <!-- Lien vers le fichier app.js -->
     <script src="app.js"></script>
 </body>
