--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TodoList</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    
 </head>
 <body>
 
@@ -21,41 +22,13 @@
             </div>
 
             <ul class="list-group">
-                <li class="todo list-group-item d-flex align-items-center">
-                    <input class="form-check-input" type="checkbox" id="todo-3">
-                    <label class="ms-2 form-check-label" for="todo-1">
-                        Tâche à faire 3
-                    </label>
-                    <label class="ms-auto btn btn-danger btn-sm">
-                    <i class="bi-trash">
-                    </i>
-                    </label>
-                </li>
-            <li class="todo list-group-item d-flex align-items-center">
-                <input class="form-check-input" type="checkbox" id="todo-2">
-                <label class="ms-2 form-check-label" for="todo-2">
-                    Tâche à faire 2
-                </label>
-                <label class="ms-auto btn btn-danger btn-sm">
-                <i class="bi-trash">
-                </i>
-                </label>
-            </li>
-            <li class="todo list-group-item d-flex align-items-center">
-                <input class="form-check-input" type="checkbox" id="todo-1">
-                <label class="ms-2 form-check-label" for="todo-1">
-                    Tâche à faire 1
-                </label>
-                <label class="ms-auto btn btn-danger btn-sm">
-                <i class="bi-trash">
-                </i>
-                </label>
-            </li>
+            
             </ul>
         </main>
     </section>
 
     <!-- Lien vers le fichier app.js -->
-    <script src="app.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="app.js" type="module" defer></script>
 </body>
 </html>
